--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
 
 <ul>
-<li> <a href=".\Game%20of%20Life\Index.html">Game of Life</a></li>
-<li><a href=".\StarField\Index.html">Light Speed!</a></li>
+<li> <a href=".\Game%20of%20Life\Index.html">Game of life</a></li>
+<li><a href=".\StarFielf\Index.html">Light Speed!</a></li>
 <li><a href=".\Music\Music.html">Music</a></li>
+<li><a href = ".\Fractal\index.html">Fractal Tree</a></li>	
 </ul>
 </body>
