--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
 <ul>
-<li> <a href=".\Game%20of%20Life\Index.html">Game of life</a></li>
+<li> <a href=".\Game%20of%20life\Index.html">Game of life</a></li>
 <li><a href=".\StarFielf\Index.html">Light Speed!</a></li>
 <li><a href=".\Music\Music.html">Music</a></li>
 <li><a href = ".\Fractal\index.html">Fractal Tree</a></li>	
