--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 <ul>
 <li> <a href=".\Game%20of%20Life\Index.html">Game of Life</a></li>
-<li><a href=".\StarField\Index.html">Light Speed!</a></li>
-<li><a href=".\Music\Music.html">Music</a></li>
+<li><a href=".\starfield\Index.html">Light Speed!</a></li>
+<li><a href=".\perlin1d\Index.html">Perlin Terrain 1D</a></li>
+<li><a href=".\perlin2d\Index.html">Perlin stoke art</a></li>
 </ul>
 </body>
