--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 
 
 <ul>
-<<<<<<< HEAD
 <li> <a href=".\Game%20of%20Life\Index.html">Game of Life</a></li>
 <li><a href=".\starfield\Index.html">Light Speed!</a></li>
 <li><a href=".\perlin1d\Index.html">Perlin Terrain 1D</a></li>
 <li><a href=".\perlin2d\Index.html">Perlin stoke art</a></li>
-=======
+
 <li> <a href=".\Game%20of%20life\Index.html">Game of life</a></li>
 <li><a href=".\StarFielf\Index.html">Light Speed!</a></li>
 <li><a href=".\Music\Music.html">Music</a></li>
 <li><a href = ".\Fractal\index.html">Fractal Tree</a></li>	
->>>>>>> origin/master
+
 </ul>
 </body>
+</html>
