--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <ul>
 <li> <a href=".\Game%20of%20life/Index.html">Game of Life</a></li>
-<li><a href=".\starfield\Index.html">Light Speed!</a></li>
-<li><a href=".\perlin1d\Index.html">Perlin Terrain 1D</a></li>
-<li><a href=".\perlin2d\Index.html">Perlin stoke art</a></li>
+<li><a href=".starfield/">Light Speed!</a></li>
+<li><a href="./perlin1d/">Perlin Terrain 1D</a></li>
+<li><a href="./perlin2d/">Perlin stoke art</a></li>
 <li><a href = ".\Fractal\index.html">Fractal Tree</a></li>	
 
 
