--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 
 
+
+
+
+
 <html>
 
+	<style>
+		body{
+			background-color:'black', color:'white;
+		}
+	</style>
+	
+	
 <head>
 <title>
 	Websites
