--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <div class="wrapper">
 
     <div class="menu">
-      <a href="https://www.google.com/" class="one">About Me</a>
-      <a href="#" class="two">Projects</a>
+      <a href="" class="one">About Me</a>
+      <a href="Projects.html" class="two">Projects</a>
       <a href="#" class="three">Contact</a>
      
       </a>
