--- a/Projects.html
+++ b/Projects.html
@@ -31,7 +31,8 @@
 <li><a href="./starfield/">Light Speed!</a></li>
 <li><a href="./perlin1d/">Perlin Terrain 1D</a></li>
 <li><a href="./perlin2d/">Perlin stoke art</a></li>
-<li><a href = ".\Fractal\index.html">Fractal Tree</a></li>	
+<li><a href = ".\Fractal\index.html">Fractal Tree</a></li>
+<li><a href src = "\Voice\choose.html"> Voices </a></li>
 </ul>
 </body>
 </html>
