--- a/Projects.html
+++ b/Projects.html
@@ -32,7 +32,7 @@
 <li><a href="./perlin1d/">Perlin Terrain 1D</a></li>
 <li><a href="./perlin2d/">Perlin stoke art</a></li>
 <li><a href = ".\Fractal\index.html">Fractal Tree</a></li>
-<li><a href src = "http://glitchhop.xyz/Voice/choose.html"> Voices </a></li>
+<li><a href ="http://glitchhop.xyz/Voice/choose.html"> Voices </a></li>
 </ul>
 </body>
 </html>
