--- a/Voice/choose.html
+++ b/Voice/choose.html
@@ -2,7 +2,7 @@
 	<html>
 		<body>
 			<ul>
-			<li><a href = "speak.html">Speak</a></li>
+			<li><a href = "Speak.html">Speak</a></li>
 			<li><a href = "FFT.html">FFT</a></li>
 			</ul>
 			</body>
