--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 If your browser doesn't automatically go there within a few seconds, 
 you may want to go to 
-<a href="Glithhop.xyz/Final/Home.html">the destination</a> 
+<a href="JustHardCodeIt.github.io/blob/master/Final/Home.html">the destination</a> 
 manually.
 </body>
 </html>
